--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Timer!</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
-  <body>
-    <div class="stoper">
-      <nav class="controls">
-        <a href="#" class="button" id="start">Start</a>
-        <a href="#" class="button" id="stop">Stop</a>
-        <a href="#" class="button" id="reset">Reset</a>
-      </nav>
-      <div class="stopwatch"></div>
-      <ul class="results"></ul>
-    </div>
 
-    <script type="text/javascript" src="script-compiled.js"></script>
-  </body>
+<head>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+   <title>Timer!</title>
+   <link rel="stylesheet" type="text/css" href="styles.css"/>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+   <div id="root"></div>
+
+
+   <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
+   <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+
+   <script type="text/javascript" src="script.js"></script>
+</body>
+
 </html>
