--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
    <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
 
-   <script type="text/javascript" src="script.js"></script>
+   <script type="text/javascript" src="script-compiled.js"></script>
 </body>
 
 </html>
